@startuml

title 10. Production recipes and production orders

hide circle
skinparam linetype ortho

enum ProductionOrderStatus {
	draft
	planned
	materials_reserved
	in_progress
	completed
	canceled
}

entity ProductionRecipe {
	* id: int
	--
	* name: string(255)
	* outputQuantity: decimal(14,4)
	* product: Product
	* store: Store
	createdAt: DateTimeImmutable
	updatedAt: DateTimeImmutable
}

entity ProductionRecipeItem {
	* id: int
	--
	* quantity: decimal(14,4)
	* recipe: ProductionRecipe
	* material: Product
}

entity ProductionOrder {
	* id: int
	--
	* number: string(255)
	* status: ProductionOrderStatus
	* plannedQuantity: decimal(14,4)
	completedQuantity: decimal(14,4)?
	* product: Product
	warehouse: Warehouse?
	recipe: ProductionRecipe?
	* store: Store
}

entity ProductionOrderMaterial {
	* id: int
	--
	* plannedQuantity: decimal(14,4)
	consumedQuantity: decimal(14,4)?
	* productionOrder: ProductionOrder
	* material: Product
	recipeItem: ProductionRecipeItem?
}

Store ||--o{ ProductionRecipe : owns
Store ||--o{ ProductionOrder : owns
Product ||--o{ ProductionRecipe : manufactured by
Product ||--o{ ProductionRecipeItem : used as material
Product ||--o{ ProductionOrder : produced as
Product ||--o{ ProductionOrderMaterial : planned material
ProductionRecipe ||--o{ ProductionRecipeItem : contains materials
ProductionRecipe |o--o{ ProductionOrder : used by
ProductionRecipeItem |o--o{ ProductionOrderMaterial : copied into plan
ProductionOrder ||--o{ ProductionOrderMaterial : plans materials
ProductionOrderStatus ||--o{ ProductionOrder : controls
ProductionOrder ||--o{ InventoryDocument : generates consumption/output docs
Warehouse ||--o{ ProductionOrder : receives production

note right of ProductionRecipe
  Current project status:
  - Production entities are not implemented.
  - Product has canBeManufactured and productKind.

  Required behavior:
  - Recipe belongs to produced product and store.
  - Recipe items are material/component products.
  - Product with productKind=service should not be material/output
    unless business rules explicitly allow it.
end note

note right of ProductionOrder
  Required behavior:
  - Order copies recipe items into ProductionOrderMaterial.
  - Materials can be reserved before production.
  - Starting production consumes materials via InventoryDocument.
  - Completing production posts output via InventoryDocument.
  - Losses/extra consumption are stock documents, not direct edits.
end note

note bottom
  Suggested implementation steps:

  1. Add ProductionRecipe and ProductionRecipeItem CRUD.
  2. Add ProductionOrder and ProductionOrderMaterial entities.
  3. Add service to create ProductionOrder from recipe.
  4. Integrate material reservation after StockReservation stage.
  5. Integrate consumption/output after InventoryDocument stage.
  6. Add tests for recipe copy, status transitions and stock posting.

  This stage should be done after inventory and reservations.
end note

@enduml
